/**
  Generated by prisma-generator-proto3 v1.0.0
  Copied from 'packages/database/generated/proto' 
*/

syntax = "proto3";

message Property { 
  optional string anchorsCoTenants = 1;
  repeated string appliances = 2;
  repeated string associationAmenities = 3;
  repeated string basement = 4;
  optional bool basementYn = 5;
  optional int32 bathroomsFull = 6;
  optional int32 bathroomsHalf = 7;
  optional int32 bathroomsOneQuarter = 8;
  optional int32 bathroomsThreeQuarter = 9;
  optional int32 bathroomsTotalInteger = 10;
  optional int32 bedroomsTotal = 11;
  optional string builderModel = 12;
  optional string builderName = 13;
  repeated string buildingFeatures = 14;
  optional string buildingName = 15;
  repeated string businessType = 16;
  optional string buyerAgencyCompensation = 17;
  optional string buyerAgencyCompensationType = 18;
  optional string buyerAgentEmail = 19;
  optional string buyerAgentFirstName = 20;
  optional string buyerAgentKey = 21;
  optional int32 buyerAgentKeyNumeric = 22;
  optional string buyerAgentLastName = 23;
  optional string buyerAgentMiddleName = 24;
  optional string buyerAgentMlsId = 25;
  optional string buyerAgentMobilePhone = 26;
  optional string buyerAgentOfficePhone = 27;
  optional string buyerAgentOfficePhoneExt = 28;
  optional string buyerAgentPreferredPhone = 29;
  optional string buyerAgentPreferredPhoneExt = 30;
  optional string buyerAgentStateLicense = 31;
  optional string buyerOfficeKey = 32;
  optional int32 buyerOfficeKeyNumeric = 33;
  optional string buyerOfficeMlsId = 34;
  optional string buyerOfficeName = 35;
  optional string buyerOfficePhone = 36;
  optional string buyerOfficePhoneExt = 37;
  optional int32 buyerTeamKeyNumeric = 38;
  optional string cancellationDate = 39;
  optional float capRate = 40;
  optional string city = 41;
  optional string cityRegion = 42;
  optional string closeDate = 43;
  optional float closePrice = 44;
  optional string coBuyerAgentEmail = 45;
  optional string coBuyerAgentFirstName = 46;
  optional string coBuyerAgentKey = 47;
  optional int32 coBuyerAgentKeyNumeric = 48;
  optional string coBuyerAgentLastName = 49;
  optional string coBuyerAgentMiddleName = 50;
  optional string coBuyerAgentMlsId = 51;
  optional string coBuyerAgentMobilePhone = 52;
  optional string coBuyerAgentOfficePhone = 53;
  optional string coBuyerAgentOfficePhoneExt = 54;
  optional string coBuyerAgentPreferredPhone = 55;
  optional string coBuyerAgentPreferredPhoneExt = 56;
  optional string coBuyerOfficeKey = 57;
  optional int32 coBuyerOfficeKeyNumeric = 58;
  optional string coBuyerOfficeMlsId = 59;
  optional string coBuyerOfficeName = 60;
  optional string coBuyerOfficePhone = 61;
  optional string coBuyerOfficePhoneExt = 62;
  optional string coListAgentEmail = 63;
  optional string coListAgentFirstName = 64;
  optional string coListAgentKey = 65;
  optional int32 coListAgentKeyNumeric = 66;
  optional string coListAgentLastName = 67;
  optional string coListAgentMiddleName = 68;
  optional string coListAgentMlsId = 69;
  optional string coListAgentMobilePhone = 70;
  optional string coListAgentOfficePhone = 71;
  optional string coListAgentOfficePhoneExt = 72;
  optional string coListAgentPreferredPhone = 73;
  optional string coListAgentPreferredPhoneExt = 74;
  optional string coListAgentStateLicense = 75;
  optional string coListOfficeKey = 76;
  optional int32 coListOfficeKeyNumeric = 77;
  optional string coListOfficeMlsId = 78;
  optional string coListOfficeName = 79;
  optional string coListOfficePhone = 80;
  optional string coListOfficePhoneExt = 81;
  optional string commonInterest = 82;
  repeated string communityFeatures = 83;
  optional string continentRegion = 84;
  optional string contingentDate = 85;
  optional string contractStatusChangeDate = 86;
  repeated string cooling = 87;
  optional bool coolingYn = 88;
  optional string country = 89;
  optional string countryRegion = 90;
  optional string countyOrParish = 91;
  optional bool cropsIncludedYn = 92;
  optional float cultivatedArea = 93;
  repeated string currentUse = 94;
  repeated string developmentStatus = 95;
  optional int32 distanceToBusNumeric = 96;
  optional string distanceToBusUnits = 97;
  optional int32 distanceToElectricNumeric = 98;
  optional string distanceToElectricUnits = 99;
  optional int32 distanceToFreewayNumeric = 100;
  optional string distanceToFreewayUnits = 101;
  optional int32 distanceToGasNumeric = 102;
  optional string distanceToGasUnits = 103;
  optional int32 distanceToPhoneServiceNumeric = 104;
  optional string distanceToPhoneServiceUnits = 105;
  optional int32 distanceToPlaceofWorshipNumeric = 106;
  optional string distanceToPlaceofWorshipUnits = 107;
  optional int32 distanceToSchoolBusNumeric = 108;
  optional string distanceToSchoolBusUnits = 109;
  optional int32 distanceToSchoolsNumeric = 110;
  optional string distanceToSchoolsUnits = 111;
  optional int32 distanceToSewerNumeric = 112;
  optional string distanceToSewerUnits = 113;
  optional int32 distanceToShoppingNumeric = 114;
  optional string distanceToShoppingUnits = 115;
  optional int32 distanceToStreetNumeric = 116;
  optional string distanceToStreetUnits = 117;
  optional int32 distanceToWaterNumeric = 118;
  optional string distanceToWaterUnits = 119;
  repeated string doorFeatures = 120;
  optional bool dualVariableCompensationYn = 121;
  optional string expirationDate = 122;
  repeated string exteriorFeatures = 123;
  optional bool farmCreditServiceInclYn = 124;
  optional string farmLandAreaSource = 125;
  optional string farmLandAreaUnits = 126;
  repeated string fencing = 127;
  repeated string fireplaceFeatures = 128;
  optional bool fireplaceYn = 129;
  optional int32 fireplacesTotal = 130;
  repeated string flooring = 131;
  optional string frontageLength = 132;
  repeated string frontageType = 133;
  optional float garageSpaces = 134;
  optional bool garageYn = 135;
  optional bool grazingPermitsBlmYn = 136;
  optional bool grazingPermitsForestServiceYn = 137;
  optional bool grazingPermitsPrivateYn = 138;
  repeated string greenBuildingVerification = 139;
  optional float grossIncome = 140;
  optional float grossScheduledIncome = 141;
  optional bool habitableResidenceYn = 142;
  repeated string heating = 143;
  optional bool heatingYn = 144;
  repeated string horseAmenities = 145;
  optional bool horseYn = 146;
  repeated string interiorFeatures = 147;
  optional bool internetAddressDisplayYn = 148;
  optional bool internetAutomatedValuationDisplayYn = 149;
  optional bool internetConsumerCommentYn = 150;
  optional bool internetEntireListingDisplayYn = 151;
  optional bool landLeaseYn = 152;
  optional float latitude = 153;
  repeated string laundryFeatures = 154;
  optional string leaseTerm = 155;
  repeated string levels = 156;
  optional string listAgentEmail = 157;
  optional string listAgentFirstName = 158;
  optional string listAgentKey = 159;
  optional int32 listAgentKeyNumeric = 160;
  optional string listAgentLastName = 161;
  optional string listAgentMiddleName = 162;
  optional string listAgentMlsId = 163;
  optional string listAgentMobilePhone = 164;
  optional string listAgentOfficePhone = 165;
  optional string listAgentOfficePhoneExt = 166;
  optional string listAgentPreferredPhone = 167;
  optional string listAgentPreferredPhoneExt = 168;
  optional string listAgentStateLicense = 169;
  optional string listOfficeKey = 170;
  optional int32 listOfficeKeyNumeric = 171;
  optional string listOfficeMlsId = 172;
  optional string listOfficeName = 173;
  optional string listOfficePhone = 174;
  optional string listOfficePhoneExt = 175;
  optional float listPrice = 176;
  optional int32 listTeamKeyNumeric = 177;
  optional string listingAgreement = 178;
  optional string listingContractDate = 179;
  optional string listingId = 180;
  optional string listingKey = 181;
  optional int32 listingKeyNumeric = 182;
  optional string listingService = 183;
  optional float livingArea = 184;
  optional string livingAreaUnits = 185;
  optional float longitude = 186;
  optional string lotDimensionsSource = 187;
  repeated string lotFeatures = 188;
  optional float lotSizeAcres = 189;
  optional float lotSizeArea = 190;
  optional string lotSizeDimensions = 191;
  optional float lotSizeSquareFeet = 192;
  optional string lotSizeUnits = 193;
  optional string mlsAreaMajor = 194;
  optional string make = 195;
  optional string mlsStatus = 196;
  optional int32 mobileLength = 197;
  optional int32 mobileWidth = 198;
  optional string model = 199;
  optional string modificationTimestamp = 200;
  optional float netOperatingIncome = 201;
  optional int32 numberOfUnitsTotal = 202;
  optional string offMarketDate = 203;
  optional string onMarketDate = 204;
  optional float operatingExpense = 205;
  optional string originalEntryTimestamp = 206;
  optional float originalListPrice = 207;
  optional string originatingSystemId = 208;
  optional string originatingSystemKey = 209;
  optional string originatingSystemName = 210;
  repeated string otherEquipment = 211;
  repeated string otherStructures = 212;
  optional string parcelNumber = 213;
  repeated string parkingFeatures = 214;
  optional float pastureArea = 215;
  repeated string patioAndPorchFeatures = 216;
  optional string photosChangeTimestamp = 217;
  optional int32 photosCount = 218;
  repeated string poolFeatures = 219;
  optional bool poolPrivateYn = 220;
  repeated string possibleUse = 221;
  optional string postalCity = 222;
  optional string postalCode = 223;
  optional string postalCodePlus4 = 224;
  repeated string powerProduction = 225;
  optional string privateRemarks = 226;
  optional bool propertyAttachedYn = 227;
  optional string propertySubType = 228;
  optional string propertyType = 229;
  optional string publicRemarks = 230;
  optional string publicSurveyRange = 231;
  optional string publicSurveySection = 232;
  optional string publicSurveyTownship = 233;
  optional string purchaseContractDate = 234;
  optional float rangeArea = 235;
  repeated string roadFrontageType = 236;
  repeated string roadResponsibility = 237;
  repeated string roadSurfaceType = 238;
  repeated string roomType = 239;
  repeated string rooms = 240;
  optional int32 roomsTotal = 241;
  repeated string securityFeatures = 242;
  optional bool seniorCommunityYn = 243;
  optional int32 showingAdvanceNotice = 244;
  optional bool showingAttendedYn = 245;
  optional string showingContactPhone = 246;
  optional string showingContactPhoneExt = 247;
  repeated string showingDays = 248;
  optional string showingEndTime = 249;
  optional string showingInstructions = 250;
  repeated string showingRequirements = 251;
  optional string showingStartTime = 252;
  optional string sourceSystemId = 253;
  optional string sourceSystemKey = 254;
  optional string sourceSystemName = 255;
  repeated string spaFeatures = 256;
  optional bool spaYn = 257;
  optional string standardStatus = 258;
  optional string stateOrProvince = 259;
  optional string stateRegion = 260;
  optional string statusChangeTimestamp = 261;
  optional int32 stories = 262;
  optional int32 storiesTotal = 263;
  optional string streetAdditionalInfo = 264;
  optional string streetDirPrefix = 265;
  optional string streetDirSuffix = 266;
  optional string streetName = 267;
  optional string streetNumber = 268;
  optional int32 streetNumberNumeric = 269;
  optional string streetSuffix = 270;
  optional string streetSuffixModifier = 271;
  repeated string structureType = 272;
  optional string subdivisionName = 273;
  repeated string syndicateTo = 274;
  optional string syndicationRemarks = 275;
  optional string topography = 276;
  optional string township = 277;
  optional string unitNumber = 278;
  repeated string unitTypeType = 279;
  repeated string unitTypes = 280;
  optional string universalPropertyId = 281;
  optional string universalPropertySubId = 282;
  optional string unparsedAddress = 283;
  repeated string vegetation = 284;
  repeated string view = 285;
  optional bool viewYn = 286;
  optional string virtualTourUrlUnbranded = 287;
  optional string waterBodyName = 288;
  repeated string waterfrontFeatures = 289;
  optional bool waterfrontYn = 290;
  repeated string windowFeatures = 291;
  optional string withdrawnDate = 292;
  optional float woodedArea = 293;
  optional int32 yearBuilt = 294;
  repeated Media media = 295;
}

message Media { 
  optional string changedByMemberId = 1;
  optional string changedByMemberKey = 2;
  optional int32 changedByMemberKeyNumeric = 3;
  optional string imageOf = 4;
  optional string mediaKey = 5;
  optional int32 mediaKeyNumeric = 6;
  optional string mediaObjectId = 7;
  optional string mediaUrl = 8;
  optional string modificationTimestamp = 9;
  optional int32 order = 10;
  optional string originatingSystemId = 11;
  optional string originatingSystemMediaKey = 12;
  optional bool preferredPhotoYn = 13;
  optional string resourceName = 14;
  optional string resourceRecordId = 15;
  optional string resourceRecordKey = 16;
  optional int32 resourceRecordKeyNumeric = 17;
  optional string sourceSystemId = 18;
  Property property = 20;
}

