syntax = "proto3";

import "proto/property.proto";

service MLS {
    rpc UpsertProperty(UpsertPropertyRequest) returns (UpsertPropertyResponse) {}
}
