syntax = "proto3";

message UpsertPropertyRequest {
    string address = 1;
}

message UpsertPropertyResponse {
    bool success = 1;
}